--- a/webapp/views/templates/publicacoes.html
+++ b/webapp/views/templates/publicacoes.html
@@ -11,20 +11,17 @@
     </div>
 </div>
 
-
-
-
 {{ define "curtidas" }}
-<i class="fa-solid fa-heart curtir-publicacao"></i> 
+<i class="fa-solid fa-heart curtir-publicacao" style="cursor: pointer;"></i> 
 <span>{{ .Curtidas }}</span>
 {{ end }}
 
 {{ define "editar" }}
-<a href="/editar"><i class="fa-solid fa-pen-to-square"></i></a>
+<a href="/publicacoes/{{ .ID }}/atualizar"><i class="fa-solid fa-pen-to-square"></i></a>
 {{ end }}
 
 {{ define "deletar" }}
-<a href="/deletar"><i class="fa-solid fa-trash text-danger"></i></a>
+<i class="fa-solid fa-trash text-danger deletar-publicacao" style="cursor: pointer;"></i>
 {{ end }}
 
 {{ define "cabecalho-publicacao" }}
@@ -42,8 +39,8 @@
 
         <p>
             {{ template "curtidas" . }}
-            {{ template "editar" }}
-            {{ template "deletar" }}
+            {{ template "editar" . }}
+            {{ template "deletar" . }}
         </p>
 
     </div>
