--- a/webapp/views/templates/scripts.html
+++ b/webapp/views/templates/scripts.html
@@ -3,5 +3,6 @@
 <script src="/assets/js/jquery.min.js"></script>
 <script src="/assets/js/bootstrap.js"></script>
 <script src="https://kit.fontawesome.com/5d8072ebba.js" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 {{end}}
