Commit criação da funcionalidade de logout do sistema e implementação de melhorias visuais nas páginas

--- a/webapp/views/templates/footer.html
+++ b/webapp/views/templates/footer.html
@@ -1,6 +1,6 @@
 {{ define "footer" }}
 
-<footer class="text-muted mt-4">
+<footer class="text-center mt-4">
     <div class="container">
         <p>
             © DevBook 2025. Todos os direitos reservados
