--- a/webapp/views/atualizar-publicacao.html
+++ b/webapp/views/atualizar-publicacao.html
@@ -8,28 +8,32 @@
     <link href="/assets/css/bootstrap.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
     {{ template "navbar" }}
 
-    <div class="container-fluid">
-        <div class="row mt-4">
-            <div class="col-12">
-                <h3>Atualizar Publicação</h3>
-                <div class="mb-3">
-                    <label for="titulo">Título</label>
-                    <input type="text" class="form-control" name="titulo" id="titulo" placeholder="Insira o titulo da sua publicação" value="{{ .Titulo }}">
+    <main class="flex-fill">
+        <div class="container-fluid">
+            <div class="row mt-4">
+                <div class="col-12">
+                    <h3>Atualizar Publicação</h3>
+                    <div class="mb-3">
+                        <label for="titulo">Título</label>
+                        <input type="text" class="form-control" name="titulo" id="titulo"
+                            placeholder="Insira o titulo da sua publicação" value="{{ .Titulo }}">
+                    </div>
+                    <div class="mb-3">
+                        <label for="conteudo">Conteúdo</label>
+                        <textarea class="form-control" name="conteudo" id="conteudo"
+                            placeholder="Insira o conteúdo da sua publicação">{{ .Conteudo }}</textarea>
+                    </div>
+                    <button id="atualizar-publicacao" class="btn btn-info" data-puglicacao-id="{{ .ID }}">
+                        Salvar Alterações
+                    </button>
                 </div>
-                <div class="mb-3">
-                    <label for="conteudo">Conteúdo</label>
-                    <textarea class="form-control" name="conteudo" id="conteudo" placeholder="Insira o conteúdo da sua publicação">{{ .Conteudo }}</textarea>
-                </div>
-                <button id="atualizar-publicacao" class="btn btn-info" data-puglicacao-id="{{ .ID }}">
-                    Salvar Alterações
-                </button>
             </div>
         </div>
-    </div>
+    </main>
 
     {{ template "footer" }}
     {{ template "scripts" }}
