--- a/webapp/views/home.html
+++ b/webapp/views/home.html
@@ -8,44 +8,47 @@
   <link href="/assets/css/bootstrap.css" rel="stylesheet" />
 </head>
 
-<body>
+<body class="d-flex flex-column min-vh-100">
 
   {{ template "navbar" }}
 
-  <div class="container-fluid mt-4">
-    <div class="row">
-      <!-- Coluna do formulário -->
-      <div class="col-md-5 mb-4">
-        <h3>Nova Publicação</h3>
-        <form id="nova-publicacao">
-          <div class="mb-3">
-            <label for="titulo" class="form-label">Título</label>
-            <input type="text" class="form-control" name="titulo" id="titulo" required
-              placeholder="Insira o Título da publicação" />
-          </div>
+  <main class="flex-fill">
+    <div class="container-fluid mt-4">
+      <div class="row">
+        <!-- Coluna do formulário -->
+        <div class="col-md-5 mb-4">
+          <h3>Nova Publicação</h3>
+          <form id="nova-publicacao">
+            <div class="mb-3">
+              <label for="titulo" class="form-label">Título</label>
+              <input type="text" class="form-control" name="titulo" id="titulo" required
+                placeholder="Insira o Título da publicação" />
+            </div>
 
-          <div class="mb-3">
-            <label for="conteudo" class="form-label">Conteúdo</label>
-            <textarea class="form-control" name="conteudo" id="conteudo" rows="4" required
-              placeholder="Insira o Conteúdo da publicação"></textarea>
-          </div>
+            <div class="mb-3">
+              <label for="conteudo" class="form-label">Conteúdo</label>
+              <textarea class="form-control" name="conteudo" id="conteudo" rows="4" required
+                placeholder="Insira o Conteúdo da publicação"></textarea>
+            </div>
 
-          <button class="btn btn-primary" type="submit">Publicar</button>
-        </form>
-      </div>
+            <button class="btn btn-primary" type="submit">Publicar</button>
+          </form>
+        </div>
 
-      <!-- Coluna das publicações -->
-      <div class="col-md-7 d-flex flex-column gap-3">
-        {{ range .Publicacoes }}
+        <!-- Coluna das publicações -->
+        <div class="col-md-7 d-flex flex-column gap-3">
+          {{ range .Publicacoes }}
           {{ if (eq .AutorID $.UsuarioID) }}
-            {{ template "publicacao-com-permissao" . }}
+          {{ template "publicacao-com-permissao" . }}
           {{ else }}
-            {{ template "publicacao-sem-permissao" . }}
+          {{ template "publicacao-sem-permissao" . }}
           {{ end }}
-        {{ end }}
+          {{ end }}
+        </div>
       </div>
     </div>
-  </div>
+  </main>
+
 
   {{ template "footer" }}
 
