--- a/webapp/views/templates/publicacoes.html
+++ b/webapp/views/templates/publicacoes.html
@@ -27,7 +27,7 @@
 {{ define "cabecalho-publicacao" }}
 <h5 class="card-title">{{ .Titulo }}</h5>
 <p class="card-text">{{ .Conteudo }}</p>
-<a href="#">{{ .AutorNick }} - {{ .CriadaEm.Format "02/01/2006" }}</a>
+<a href="/usuario/{{ .AutorID }}">{{ .AutorNick }} - {{ .CriadaEm.Format "02/01/2006" }}</a>
 <hr class="my-4">
 {{ end }}
 
