--- a/webapp/views/templates/navbar.html
+++ b/webapp/views/templates/navbar.html
@@ -10,7 +10,7 @@
         <div class="collapse navbar-collapse" id="navbar-principal">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Página Principal</a>
+                    <a class="nav-link active" aria-current="page" href="/home">Página Principal</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="/perfil">Meu Perfil</a>
